--- a/style.css
+++ b/style.css
@@ -1273,6 +1273,10 @@
 	.link .linkflairlabel {
 	    font-size: 12px !important;
 	    max-width: 20em !important;	    
+	    display: inline !important;
+	    top: -2px !important;
+		padding: 1px 2px !important;		
+		margin-bottom: 10px !important;
 	}
 	
 	.tagline .friend {
