Increased max size of collapsed entries in new search page.

--- a/style.css
+++ b/style.css
@@ -1246,6 +1246,10 @@
 	    margin-bottom: 10px !important;
 	}
 	
+	.combined-search-page .search-result .search-expando.collapsed {
+    	max-height: 55px !important;;
+	}
+	
 	/***************************
 	********* Voting ***********
 	****************************/	
