Removed subreddit interest bar.

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
 	.sidebox.holiday_shopping, 		/* sidebar link to marketplace */
 	.debuginfo,						/* info on server that rendered	the page */		
 	.searchpane-toggle-hide,		/* link to hide search box on search page */
+	.sr-interest-bar,				/* box to find 'interesting' subreddits, displayed on front page */
 	#sponsorship, #ad_main, #ad_sponsorship 			/* ad in sidebar */	
 	{    
 	  display: none !important;
