--- a/style.css
+++ b/style.css
@@ -691,8 +691,6 @@
 	}
 	
 	.RESCloseButton {
-		color: #fff !important;
-		background-color: #777 !important;
 		right:11px !important;
 		padding-top: 2px !important;
 		margin-top: 5px !important;
@@ -706,17 +704,7 @@
 		padding-bottom: 10px !important;
 	}
 	
-	#quickMessageDialogBody {
-		color: #fff !important;
-		background-color: #000  !important;
-	}
-	
 	#quickMessageDialogBody:hover {
-		background-color: #777 !important;
-	}
-	
-	#quickMessageDialogFrom {
-		color: #fff !important;
 		background-color: #777 !important;
 	}
 	
@@ -1466,9 +1454,19 @@
 		background-color: #4BA00D !important;
 	}
 
-	#quickMessageDialog {
+	.res-nightmode #quickMessageDialog {
 		background-color: #000 !important;
-		color: rgb(204, 204, 204) !important;
+		color: #CCCCCC !important;
+	}	
+			
+	.res-nightmode #quickMessageDialogFrom {
+		color: #fff !important;
+		background-color: #777 !important;
+	}
+		
+	.res-nightmode #quickMessageDialogBody {
+		color: #fff !important;
+		background-color: #000  !important;
 	}
 	
 	.res-nightmode .usertext-edit textarea:hover    {
@@ -1486,6 +1484,11 @@
 	     background-color: #171717 !important;
 	     border: 1px solid #444444;
 	     border-radius: 3px;
+	}
+	
+	.res-nightmode .RESCloseButton {
+		color: #fff !important;
+		background-color: #777 !important;
 	}
 	    
 	 .res-nightmode #RESConsole input {
