--- a/style.css
+++ b/style.css
@@ -1039,6 +1039,11 @@
 		line-height: 30px !important;
 	}
 	
+	.archived-infobar { /* bar that states the comment page is archived */ 
+		margin-left: 7px !important;
+		margin-right: 7px !important;
+	}
+	
 	/******************************
 	******* CREATE A COMMENT ******
 	******************************/
